compiler/testData/diagnostics/tests/script/AccessForwardDeclarationInScript.kts
val x = <!UNRESOLVED_REFERENCE!>y<!>

val y = 2
